--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 assignment/bin/Debug
 assignment/.vs/Algorithms/v17/.suo
+assignment/bin/Debug/dcg.pdb
+assignment/obj/Debug/Algorithms.csproj.FileListAbsolute.txt
+assignment/obj/Debug/dcg.exe
+assignment/obj/Debug/dcg.pdb
