--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
-assignment/bin/Debug
-assignment/.vs/Algorithms/v17/.suo
-assignment/bin/Debug/dcg.pdb
-assignment/obj/Debug/Algorithms.csproj.FileListAbsolute.txt
-assignment/obj/Debug/dcg.exe
-assignment/obj/Debug/dcg.pdb
+#Junk Files
+*.DS_Store
+[Tt]humbs.db
+
+#Visual Studio Files
+[Oo]bj
+[Bb]in
+[Dd]ebug
+[Bb]uild/
+*.user
+*.suo
+*.exe
+*.pdb
+*.aps
+*_i.c
+*_p.c
+*.ncb
+*.tlb
+*.tlh
+*.[Cc]ache
+*.bak
+*.ncb
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+ipch/ 
+*.dbmdl
+*.csproj.user
+*.cache
+*.swp
+*.vspscc
+*.vssscc
+*.bak.*
+*.bak
+
+#Other
+.svn
+
+# Include DLLs if they're in the NuGet packages directory
+!/packages/*/lib/*.dll
+!/packages/*/lib/*/*.dll
