Making the important toggles actually work

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ ipch/
 # Include DLLs if they're in the NuGet packages directory
 !/packages/*/lib/*.dll
 !/packages/*/lib/*/*.dll
+assignment/Algorithms.csproj
