--- a/assignment/Algorithms.csproj
+++ b/assignment/Algorithms.csproj
@@ -167,14 +167,14 @@
     <Compile Include="sources\Solution\A1\ExcellentDungeon.cs" />
     <Compile Include="sources\Solution\A1\GoodDungeon.cs" />
     <Compile Include="sources\Solution\A1\SufficientDungeon.cs" />
-    <Compile Include="sources\Solution\A2\LowLevelDungeonNodeGraph.cs" />
-    <Compile Include="sources\Solution\A2\RandomWayPointAgent.cs" />
-    <Compile Include="sources\Solution\A2\OnGraphWayPointAgent.cs" />
-    <Compile Include="sources\Solution\A2\HighLevelDungeonNodeGraph.cs" />
+    <Compile Include="sources\Solution\A2\NodeGraph_LowLevelDungeon.cs" />
+    <Compile Include="sources\Solution\A2\Agent_RandomWayPoint.cs" />
+    <Compile Include="sources\Solution\A2\Agent_OnGraphWayPoint.cs" />
+    <Compile Include="sources\Solution\A2\NodeGraph_HighLevelDungeon.cs" />
     <Compile Include="sources\Solution\A2\TiledDungeonView.cs" />
-    <Compile Include="sources\Solution\A3\RecursivePathFinder.cs" />
-    <Compile Include="sources\Solution\A3\BreadthFirstPathFinder.cs" />
-    <Compile Include="sources\Solution\A3\PathFindingAgent.cs" />
+    <Compile Include="sources\Solution\A3\PathFinder_Recursive.cs" />
+    <Compile Include="sources\Solution\A3\PathFinder_BreadthFirst.cs" />
+    <Compile Include="sources\Solution\A3\Agent_PathFinding.cs" />
     <Compile Include="sources\Util\Grid.cs" />
     <Compile Include="sources\Util\NodeLabelDrawer.cs" />
     <Compile Include="sources\Util\RectangleExtensions.cs" />
